# sentiment-transcriber-app

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: word_tokens.json
assets/saved_model/: keras_metadata.pb  saved_model.pb
assets/saved_model/variables/: variables.data-00000-of-00001  variables.index
client/: page.html  style.css  websocket.js
cmake/: FindrapidJSON.cmake
controllers/: websocket.cpp  websocket.h
include/: aws-transcribe.h  sentiment-inference.h  server.h
src/: audio-capture.cpp  aws-transcribe.cpp  main.cpp  sentiment-inference.cpp  server.cpp
